--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     </head>
     <body>
         <h2>This is a coding exercise.</h2>
-        <p>Oepn your console to play Rock Paper Scissors!</p>
+        <p>Open your console to play Rock Paper Scissors!</p>
     </body>
 </html>
