Make game finish playing when someone wins
Added winner text and stopped program from playing once that happens

--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
             <div id="playerPicks"></div>
             <div id="computerPicks"></div>
             <div id="winner"></div>
+            <div id="finalWinner"></div>
         </div>
     </body>
 </html>
